// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Issue Warning Component when issue is locked but not confidential renders information about locked issue 1`] = `
<span>
  The discussion in this issue is locked. Only project members can comment.
  <gl-link-stub
    href="locked-path"
    target="_blank"
  >
    Learn more.
  </gl-link-stub>
</span>
`;

exports[`Issue Warning Component when noteable is confidential but not locked renders information about confidential issue 1`] = `
<span>
  This is a confidential issue. People without permission will never get a notification.
  <gl-link-stub
    href="confidential-path"
    target="_blank"
  >
    Learn more.
  </gl-link-stub>
</span>
`;

exports[`Issue Warning Component when noteable is locked and confidential renders information about locked and confidential noteable 1`] = `
<span>
  <span>
    This issue is
    <gl-link-stub
      href=""
      target="_blank"
    >
      confidential
    </gl-link-stub>
    and its
    <gl-link-stub
      href=""
      target="_blank"
    >
      discussion is locked
    </gl-link-stub>
    .
  </span>
  People without permission will never get a notification and won't be able to comment.
</span>
`;
